src/azure-cli/azure/cli/command_modules/network/tests/hybrid_2020_09_01/recordings/test_network_extended_nsg.yaml
interactions:
- request:
    body: null
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg create
      Connection:
      - keep-alive
      ParameterSetName:
      - --name -g
      User-Agent:
      - AZURECLI/2.45.0 azsdk-python-azure-mgmt-resource/21.1.0b1 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/cli_test_extended_nsg000001?api-version=2019-10-01
  response:
    body:
      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001","name":"cli_test_extended_nsg000001","type":"Microsoft.Resources/resourceGroups","location":"westus","tags":{"product":"azurecli","cause":"automation","date":"2023-03-03T05:46:12Z"},"properties":{"provisioningState":"Succeeded"}}'
    headers:
      cache-control:
      - no-cache
      content-length:
      - '332'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 05:46:19 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
    status:
      code: 200
      message: OK
- request:
    body: '{"location": "westus"}'
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg create
      Connection:
      - keep-alive
      Content-Length:
      - '22'
      Content-Type:
      - application/json
      ParameterSetName:
      - --name -g
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1?api-version=2018-11-01
  response:
    body:
      string: "{\r\n  \"name\": \"nsg1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1\",\r\n
        \ \"etag\": \"W/\\\"106b9224-1d87-4b31-9864-1ec78f049e51\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups\",\r\n  \"location\": \"westus\",\r\n
        \ \"properties\": {\r\n    \"provisioningState\": \"Updating\",\r\n    \"resourceGuid\":
        \"d1fbe847-edd9-4bae-a8b8-7228ca86e53a\",\r\n    \"securityRules\": [],\r\n
        \   \"defaultSecurityRules\": [\r\n      {\r\n        \"name\": \"AllowVnetInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetInBound\",\r\n
        \       \"etag\": \"W/\\\"106b9224-1d87-4b31-9864-1ec78f049e51\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow inbound traffic from all VMs in VNET\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowAzureLoadBalancerInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowAzureLoadBalancerInBound\",\r\n
        \       \"etag\": \"W/\\\"106b9224-1d87-4b31-9864-1ec78f049e51\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow inbound traffic from azure load balancer\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"AzureLoadBalancer\",\r\n          \"destinationAddressPrefix\": \"*\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\":
        \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllInBound\",\r\n
        \       \"etag\": \"W/\\\"106b9224-1d87-4b31-9864-1ec78f049e51\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Deny all inbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n
        \         \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\":
        [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n      },\r\n
        \     {\r\n        \"name\": \"AllowVnetOutBound\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetOutBound\",\r\n
        \       \"etag\": \"W/\\\"106b9224-1d87-4b31-9864-1ec78f049e51\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to all VMs
        in VNET\",\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\":
        \"*\",\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Outbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowInternetOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowInternetOutBound\",\r\n
        \       \"etag\": \"W/\\\"106b9224-1d87-4b31-9864-1ec78f049e51\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to Internet\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"*\",\r\n          \"destinationAddressPrefix\": \"Internet\",\r\n          \"access\":
        \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\": \"Outbound\",\r\n
        \         \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllOutBound\",\r\n
        \       \"etag\": \"W/\\\"106b9224-1d87-4b31-9864-1ec78f049e51\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Deny all outbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Outbound\",\r\n          \"sourcePortRanges\":
        [],\r\n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\":
        [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n      }\r\n
        \   ]\r\n  }\r\n}"
    headers:
      azure-asyncnotification:
      - Enabled
      azure-asyncoperation:
      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/9425f216-2559-4785-b007-9890eebd38b4?api-version=2018-11-01
      cache-control:
      - no-cache
      content-length:
      - '6589'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 05:46:23 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - ec8a5c42-a6bb-48e2-966f-171295f956fd
      x-ms-ratelimit-remaining-subscription-writes:
      - '1199'
    status:
      code: 201
      message: Created
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg create
      Connection:
      - keep-alive
      ParameterSetName:
      - --name -g
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/9425f216-2559-4785-b007-9890eebd38b4?api-version=2018-11-01
  response:
    body:
      string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '29'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 05:46:27 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - ce21be1c-dc43-46a5-b90f-f176a076613a
    status:
      code: 200
      message: OK
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg create
      Connection:
      - keep-alive
      ParameterSetName:
      - --name -g
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1?api-version=2018-11-01
  response:
    body:
      string: "{\r\n  \"name\": \"nsg1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1\",\r\n
        \ \"etag\": \"W/\\\"5d7a7d48-2f87-4101-a9aa-9710af37c2fb\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups\",\r\n  \"location\": \"westus\",\r\n
        \ \"properties\": {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"resourceGuid\":
        \"d1fbe847-edd9-4bae-a8b8-7228ca86e53a\",\r\n    \"securityRules\": [],\r\n
        \   \"defaultSecurityRules\": [\r\n      {\r\n        \"name\": \"AllowVnetInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetInBound\",\r\n
        \       \"etag\": \"W/\\\"5d7a7d48-2f87-4101-a9aa-9710af37c2fb\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow inbound traffic from all VMs in VNET\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowAzureLoadBalancerInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowAzureLoadBalancerInBound\",\r\n
        \       \"etag\": \"W/\\\"5d7a7d48-2f87-4101-a9aa-9710af37c2fb\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow inbound traffic from azure load balancer\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"AzureLoadBalancer\",\r\n          \"destinationAddressPrefix\": \"*\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\":
        \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllInBound\",\r\n
        \       \"etag\": \"W/\\\"5d7a7d48-2f87-4101-a9aa-9710af37c2fb\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Deny all inbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n
        \         \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\":
        [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n      },\r\n
        \     {\r\n        \"name\": \"AllowVnetOutBound\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetOutBound\",\r\n
        \       \"etag\": \"W/\\\"5d7a7d48-2f87-4101-a9aa-9710af37c2fb\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to all VMs
        in VNET\",\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\":
        \"*\",\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Outbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowInternetOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowInternetOutBound\",\r\n
        \       \"etag\": \"W/\\\"5d7a7d48-2f87-4101-a9aa-9710af37c2fb\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to Internet\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"*\",\r\n          \"destinationAddressPrefix\": \"Internet\",\r\n          \"access\":
        \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\": \"Outbound\",\r\n
        \         \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllOutBound\",\r\n
        \       \"etag\": \"W/\\\"5d7a7d48-2f87-4101-a9aa-9710af37c2fb\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Deny all outbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Outbound\",\r\n          \"sourcePortRanges\":
        [],\r\n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\":
        [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n      }\r\n
        \   ]\r\n  }\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '6596'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 05:46:27 GMT
      etag:
      - W/"5d7a7d48-2f87-4101-a9aa-9710af37c2fb"
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - e34fff98-7527-4210-a672-402b4d32d181
    status:
      code: 200
      message: OK
- request:
    body: '{"name": "rule1", "properties": {"access": "Allow", "destinationAddressPrefixes":
      ["10.0.0.0/24", "11.0.0.0/24"], "destinationPortRange": "80", "direction": "Inbound",
      "priority": 1000, "protocol": "*", "sourceAddressPrefix": "*", "sourcePortRanges":
      ["700-900", "1000-1100"]}}'
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule create
      Connection:
      - keep-alive
      Content-Length:
      - '277'
      Content-Type:
      - application/json
      ParameterSetName:
      - --access --destination-address-prefixes --direction --nsg-name -g --source-address-prefixes
        -n --source-port-ranges --priority
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2018-11-01
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"6189356a-abf1-48ee-b772-a09c174dab1f\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Updating\",\r\n    \"protocol\": \"*\",\r\n
        \   \"destinationPortRange\": \"80\",\r\n    \"sourceAddressPrefix\": \"*\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\",\r\n    \"sourcePortRanges\": [\r\n      \"700-900\",\r\n      \"1000-1100\"\r\n
        \   ],\r\n    \"destinationPortRanges\": [],\r\n    \"sourceAddressPrefixes\":
        [],\r\n    \"destinationAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n
        \     \"11.0.0.0/24\"\r\n    ]\r\n  }\r\n}"
    headers:
      azure-asyncnotification:
      - Enabled
      azure-asyncoperation:
      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/304ba93c-f6d9-4da2-95bd-04f0711b0f9e?api-version=2018-11-01
      cache-control:
      - no-cache
      content-length:
      - '786'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 05:46:29 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 3082db49-b4c4-49c4-a374-93ee31ff73a4
      x-ms-ratelimit-remaining-subscription-writes:
      - '1199'
    status:
      code: 201
      message: Created
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule create
      Connection:
      - keep-alive
      ParameterSetName:
      - --access --destination-address-prefixes --direction --nsg-name -g --source-address-prefixes
        -n --source-port-ranges --priority
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/304ba93c-f6d9-4da2-95bd-04f0711b0f9e?api-version=2018-11-01
  response:
    body:
      string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '29'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 05:46:40 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - fdd6e7c3-df95-42d7-be37-128bc4bde37b
    status:
      code: 200
      message: OK
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule create
      Connection:
      - keep-alive
      ParameterSetName:
      - --access --destination-address-prefixes --direction --nsg-name -g --source-address-prefixes
        -n --source-port-ranges --priority
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2018-11-01
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"a874c017-cbe7-4bf1-9332-d1c751f6e5b0\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"protocol\": \"*\",\r\n
        \   \"destinationPortRange\": \"80\",\r\n    \"sourceAddressPrefix\": \"*\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\",\r\n    \"sourcePortRanges\": [\r\n      \"700-900\",\r\n      \"1000-1100\"\r\n
        \   ],\r\n    \"destinationPortRanges\": [],\r\n    \"sourceAddressPrefixes\":
        [],\r\n    \"destinationAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n
        \     \"11.0.0.0/24\"\r\n    ]\r\n  }\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '787'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 05:46:41 GMT
      etag:
      - W/"a874c017-cbe7-4bf1-9332-d1c751f6e5b0"
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 91f53a49-f3d2-4421-9d4b-fc2ae359b38a
    status:
      code: 200
      message: OK
- request:
    body: null
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule update
      Connection:
      - keep-alive
      ParameterSetName:
      - --destination-address-prefixes --nsg-name -g --source-address-prefixes -n
        --source-port-ranges --destination-port-ranges
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2018-11-01
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"a874c017-cbe7-4bf1-9332-d1c751f6e5b0\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"protocol\": \"*\",\r\n
        \   \"destinationPortRange\": \"80\",\r\n    \"sourceAddressPrefix\": \"*\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\",\r\n    \"sourcePortRanges\": [\r\n      \"700-900\",\r\n      \"1000-1100\"\r\n
        \   ],\r\n    \"destinationPortRanges\": [],\r\n    \"sourceAddressPrefixes\":
        [],\r\n    \"destinationAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n
        \     \"11.0.0.0/24\"\r\n    ]\r\n  }\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '787'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 05:46:42 GMT
      etag:
      - W/"a874c017-cbe7-4bf1-9332-d1c751f6e5b0"
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 82e0e71b-cce0-4d9d-aa93-91793d690b13
    status:
      code: 200
      message: OK
- request:
    body: '{"etag": "W/\"a874c017-cbe7-4bf1-9332-d1c751f6e5b0\"", "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1",
      "name": "rule1", "properties": {"access": "Allow", "destinationAddressPrefix":
      "Internet", "destinationPortRanges": ["500-1000", "2000", "3000"], "direction":
      "Inbound", "priority": 1000, "protocol": "*", "provisioningState": "Succeeded",
      "sourceAddressPrefixes": ["10.0.0.0/24", "11.0.0.0/24"], "sourcePortRange":
      "*"}}'
    headers:
      Accept:
      - application/json
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule update
      Connection:
      - keep-alive
      Content-Length:
      - '554'
      Content-Type:
      - application/json
      ParameterSetName:
      - --destination-address-prefixes --nsg-name -g --source-address-prefixes -n
        --source-port-ranges --destination-port-ranges
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2018-11-01
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"bb571f87-6fb8-474f-a68b-b04ed19ba633\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Updating\",\r\n    \"protocol\": \"*\",\r\n
        \   \"sourcePortRange\": \"*\",\r\n    \"destinationAddressPrefix\": \"Internet\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\",\r\n    \"sourcePortRanges\": [],\r\n    \"destinationPortRanges\":
        [\r\n      \"500-1000\",\r\n      \"2000\",\r\n      \"3000\"\r\n    ],\r\n
        \   \"sourceAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n      \"11.0.0.0/24\"\r\n
        \   ],\r\n    \"destinationAddressPrefixes\": []\r\n  }\r\n}"
    headers:
      azure-asyncnotification:
      - Enabled
      azure-asyncoperation:
      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/b18e8d18-c0cf-49c3-91a6-a73c02f66bd0?api-version=2018-11-01
      cache-control:
      - no-cache
      content-length:
      - '803'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 05:46:43 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 814079a2-95fe-4daa-ae44-594a3fb260bf
      x-ms-ratelimit-remaining-subscription-writes:
      - '1199'
    status:
      code: 200
      message: OK
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule update
      Connection:
      - keep-alive
      ParameterSetName:
      - --destination-address-prefixes --nsg-name -g --source-address-prefixes -n
        --source-port-ranges --destination-port-ranges
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/b18e8d18-c0cf-49c3-91a6-a73c02f66bd0?api-version=2018-11-01
  response:
    body:
      string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '29'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 05:46:53 GMT
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - 35f1ae3d-40a3-43ff-b974-d8eb4713c3c8
    status:
      code: 200
      message: OK
- request:
    body: null
    headers:
      Accept:
      - '*/*'
      Accept-Encoding:
      - gzip, deflate
      CommandName:
      - network nsg rule update
      Connection:
      - keep-alive
      ParameterSetName:
      - --destination-address-prefixes --nsg-name -g --source-address-prefixes -n
        --source-port-ranges --destination-port-ranges
      User-Agent:
      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2018-11-01
  response:
    body:
      string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"59b9b2d5-16d1-41d1-b04b-4e463d0f3a02\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"protocol\": \"*\",\r\n
        \   \"sourcePortRange\": \"*\",\r\n    \"destinationAddressPrefix\": \"Internet\",\r\n
        \   \"access\": \"Allow\",\r\n    \"priority\": 1000,\r\n    \"direction\":
        \"Inbound\",\r\n    \"sourcePortRanges\": [],\r\n    \"destinationPortRanges\":
        [\r\n      \"500-1000\",\r\n      \"2000\",\r\n      \"3000\"\r\n    ],\r\n
        \   \"sourceAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n      \"11.0.0.0/24\"\r\n
        \   ],\r\n    \"destinationAddressPrefixes\": []\r\n  }\r\n}"
    headers:
      cache-control:
      - no-cache
      content-length:
      - '804'
      content-type:
      - application/json; charset=utf-8
      date:
      - Fri, 03 Mar 2023 05:46:53 GMT
      etag:
      - W/"59b9b2d5-16d1-41d1-b04b-4e463d0f3a02"
      expires:
      - '-1'
      pragma:
      - no-cache
      server:
      - Microsoft-HTTPAPI/2.0
      - Microsoft-HTTPAPI/2.0
      strict-transport-security:
      - max-age=31536000; includeSubDomains
      transfer-encoding:
      - chunked
      vary:
      - Accept-Encoding
      x-content-type-options:
      - nosniff
      x-ms-arm-service-request-id:
      - e8c2c51b-8375-4c7c-a3f2-75b32af052e0
    status:
      code: 200
      message: OK
version: 1
